# INF2004-Embedded-Project

./: .clang-format  CMakeLists.txt  FreeRTOSConfig.h  IMU_movement.c  IMU_movement.h  Obstacle_Avoidance.c  Obstacle_Avoidance.h  PID_Line_Follow.c  PID_Line_Follow.h  README.md  barcode.c  barcode.h  encoder.c  encoder.h  imu_raw_demo.c  imu_raw_demo.h  ir_sensor.c  ir_sensor.h  lwipopts.h  lwipopts_examples_common.h  main.c  motor_encoder_demo.c  motor_encoder_demo.h  mqtt_client.c  mqtt_client.h  pico_sdk_import.cmake  picow_freertos_ping.c  picow_freertos_ping.h  platform_time_pico.c  ultrasonic.c  ultrasonic.h
dashboard/: index.html
include/: lwipopts.h  lwipopts_examples_common.h
src/: CMakeLists.txt  main.c
src/algorithms/: Obstacle_Avoidance.c  Obstacle_Avoidance.h  PID_Line_Follow.c  barcode.c  barcode.h
src/dashboard/: index.html  readme.txt
src/drivers/motor/: encoder.c  encoder.h  motor_encoder_demo.c  motor_encoder_demo.h
src/drivers/sensors/: imu_raw_demo.c  imu_raw_demo.h  ir_sensor.c  ir_sensor.h  ultrasonic.c  ultrasonic.h
src/navigation/: IMU_movement.c  IMU_movement.h
src/network/: mqtt_client.c  picow_freertos_ping.c
src/system/: FreeRTOSConfig.h  log.h
